welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: value and is not a member of Boolean
  if (day<=5 and 1<=day){return "7.00"}
             ^